Fix footer on mobile. Closes #31 (#32)
* Fix footer on mobile. Closes #31

* fix footer and footer image

--- a/css/main.scss
+++ b/css/main.scss
@@ -335,6 +335,12 @@ i:hover {
     }
   }
 
+  .links {
+    a {
+      margin-left: 10px;
+    }
+  }
+
   #footer-logo {
     margin-top: 0;
     border: none;
